change box-sizing from border-box to default content-box to fix dropdown menu sizing squishing

--- a/apps/music/styles/globals.css
+++ b/apps/music/styles/globals.css
@@ -36,7 +36,9 @@ a {
 }
 
 * {
-  box-sizing: border-box;
+  /* NEXTJS boilerplate uses border-box */
+  /* box-sizing: border-box; */
+  box-sizing: content-box;
 }
 
 /* DEBUGGING USE */
